# OpenDeskTW

./: .gitignore  COPYRIGHT  LICENSE  Package.swift  README.md  SOURCE_OFFER.md  THIRD_PARTY_NOTICES.md
AppResources/: Info.plist
cross-platform/: package-lock.json  package.json  vite.config.js
cross-platform/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
cross-platform/src-tauri/capabilities/: default.json
cross-platform/src-tauri/icons/: icon.icns
cross-platform/src-tauri/resources/: onlyoffice-home-tw.js
cross-platform/src-tauri/resources/Templates/: Blank-Document.docx  Blank-Spreadsheet.xlsx
cross-platform/src-tauri/resources/Verification/: OpenDeskTW_完整試算表功能.xlsx
cross-platform/src-tauri/resources/acropdf-core/: ACROPDF-LICENSE  embedded_core.py
cross-platform/src-tauri/resources/licenses/: SOURCE_OFFER.md  THIRD_PARTY_NOTICES.md
cross-platform/src-tauri/resources/onlyoffice-ai-tw-locale/: README.md  traditional-chinese.js
cross-platform/src-tauri/resources/onlyoffice-ai-tw-locale/translations/: zh-TW.json
cross-platform/src-tauri/resources/onlyoffice-ai-tw-locale/translations/helpers/: zh-TW.json
cross-platform/src-tauri/resources/onlyoffice-tw-plugin/: README.md  code.js  config.json  index.html  magi-result.css  magi-result.html  magi-result.js  typography.js  ui-overrides.js  ui-patch.js
cross-platform/src-tauri/src/: lib.rs  main.rs
docs/: FEATURE-COVERAGE.md  HOTFIX.md  ONE-STOP-ARCHITECTURE.md  ONLYOFFICE-TRADITIONAL-CHINESE.md  WORD-CENTER.md  WORD-COMPATIBILITY.md  WORD-FEATURE-GAP-AUDIT.md
scripts/: build_app.sh  (+18 more)
(+36 files in other folders)
