[package]
name = "opendesk-tw"
version = "2.0.1"
description = "全繁體中文、跨平台、Office 格式優先的本機文件工作台"
authors = ["OpenDesk TW Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "opendesk_tw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
zip = { version = "4", default-features = false, features = ["deflate"] }
